# Blaze-Engine

./: CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/src/: Blaze.h
Engine/src/Blaze/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
Sandbox/: CMakeLists.txt
Sandbox/src/: Sandbox.cpp
